deploy: 9a42bff1b35ca95cd8e9e01cb0cca4587fbfd64d

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 <h2 id="langages-de-programmation">Langages de programmation</h2>
 <ul>
 <li>:material-language-python: <a href="python/">Guide Python</a></li>
-<li>:material-language-c: <a href="c/">Guide C</a></li>
+<li>:material-language-cpp: <a href="c/">Guide C</a></li>
 </ul>
 <h2 id="reseaux-interfaces">Réseaux &amp; Interfaces</h2>
 <ul>
