--- a/devops/microbit.html
+++ b/devops/microbit.html
@@ -701,7 +701,8 @@
 
 
 <h1 id="carte-microbit"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6 4h12v1h3v2h-3v2h3v2h-3v2h3v2h-3v2h3v2h-3v1H6v-1H3v-2h3v-2H3v-2h3v-2H3V9h3V7H3V5h3zm5 11v3h1v-3zm2 0v3h1v-3zm2 0v3h1v-3z"/></svg></span> Carte Micro:Bit</h1>
-<p><a href="microbit/codal.html">Programmer la carte Micro:bit en C</a></p>
+<p><a href="microbit/codal.html">Programmer la carte Micro:bit en C</a>
+<a href="microbit/micro_python.html">Programmer la carte Micro:bit en Python</a></p>
 
 
 
