deploy: 3a09eced7621be208fc86d897ea7431d928cd0be

--- a/os/gnu_linux.html
+++ b/os/gnu_linux.html
@@ -818,7 +818,7 @@
 <h2 id="gestion-des-services">Gestion des services</h2>
 <p><a href="gnu_linux/systemd.html">Gestion des services avec systemd</a></p>
 <h2 id="analyser-les-connexions-reseaux">analyser les connexions réseaux</h2>
-<p><a href="gnu_linux/commande_ss.md">La commande <code>ss</code> (socket statistics)</a></p>
+<p><a href="gnu_linux/commande_ss.html">La commande <code>ss</code> (socket statistics)</a></p>
 
 
 
