deploy: 0d9ae665b74eef0e4482550e2659549fd24b3b83

--- a/reseaux_interfaces/reseaux.html
+++ b/reseaux_interfaces/reseaux.html
@@ -762,7 +762,7 @@
 <h2 id="le-dns">Le DNS</h2>
 <ul>
 <li><a href="reseaux/guide_dns.html">Le DNS</a>  </li>
-<li><a href="reseaux/commandes_host_dig.md">commandes host &amp; dig </a>  </li>
+<li><a href="reseaux/commandes_host_dig.html">commandes host &amp; dig </a>  </li>
 </ul>
 
 
