deploy: a43087ef33e5c1a4f4316432d14728398fdfd86e

--- a/reseaux_interfaces/reseaux.html
+++ b/reseaux_interfaces/reseaux.html
@@ -763,6 +763,7 @@
 <ul>
 <li><a href="reseaux/guide_dns.html">Le DNS</a>  </li>
 <li><a href="reseaux/commandes_host_dig.html">commandes host &amp; dig </a>  </li>
+<li>[Mini Serveur busybox] (reseaux/mini_serveur_busybox.md)</li>
 </ul>
 
 
