deploy: 6d931c5448e58394fbaffb3f2af644dd1ffee2cc

--- a/os/gnu_linux/install_srv_web_debian.html
+++ b/os/gnu_linux/install_srv_web_debian.html
@@ -817,11 +817,13 @@
 <strong>#</strong> indique que la commande doit être lancée en tant que super-utilisateur (root).</p>
 <h2 id="installation-de-debian">Installation de Debian</h2>
 <p><strong>1.</strong> Créer une machine virtuelle basée sur une distribution Debian  </p>
-<p><strong>Configuration machine</strong> :<br />
-  * Créer et configurer un <strong>Réseau NAT</strong> dans VirtualBox
-  * Dans la configuration réseau de la machine virtuelle sélectionner réseau NAT et indiquer le réseau crée ci-dessus.
-  * RAM : 4Gio
-  * Disque : 20 Go</p>
+<p><strong>Configuration machine</strong> :  </p>
+<ul>
+<li>Créer et configurer un <strong>Réseau NAT</strong> dans VirtualBox</li>
+<li>Dans la configuration réseau de la machine virtuelle sélectionner réseau NAT et indiquer le réseau crée ci-dessus.</li>
+<li>RAM : 4Gio</li>
+<li>Disque : 20 Go</li>
+</ul>
 <p><strong>Installation</strong> : </p>
 <ul>
 <li>Sélectionner <strong>graphical install</strong> puis suivre la procédure indiquée.</li>
