deploy: cbf08e49bf46d1d0baf2974c3222cb6b20b78531

--- a/os/gnu_linux.html
+++ b/os/gnu_linux.html
@@ -814,7 +814,7 @@
 <h2 id="installations">Installations</h2>
 <ul>
 <li><a href="gnu_linux/install_srv_web_debian.html">Installation serveur web <strong>apache2</strong> dans <strong>debian</strong></a></li>
-<li><a href="gnu_linux/alpine_nginx_install.html">Installation serveur web <strong>nginx</strong> dans <strong>Alpine-linux</strong></a></li>
+<li><a href="gnu_linux/alpine_nginx_install.html">Installation serveur web <strong>nginx</strong> dans <strong>alpine-linux</strong></a></li>
 </ul>
 <h2 id="gestion-des-peripheriques">Gestion des périphériques</h2>
 <ul>
