deploy: a3b56fe41e29010d0e83e3611dcf656d19cd88d1

--- a/os/gnu_linux.html
+++ b/os/gnu_linux.html
@@ -957,7 +957,7 @@
 </ul>
 <h2 id="sauvegarde">Sauvegarde</h2>
 <ul>
-<li><a href="gnu_linux/rsynch_sauvegarde.md">Sauvegarde avec rsynch</a></li>
+<li><a href="gnu_linux/rsync_sauvegarde.html">Sauvegarde avec rsync</a></li>
 </ul>
 
 
