deploy: 75757be006ece4ae48c1dc5048ee71c4882cf2a3

--- a/os/gnu_linux.html
+++ b/os/gnu_linux.html
@@ -939,7 +939,8 @@
 <li><a href="gnu_linux/list_usb.html">Lister les ports usb utilisés</a></li>
 <li><a href="gnu_linux/commande_ss.html">Analyser les connexions réseaux : la commande <code>ss</code> (socket statistics)</a></li>
 <li><a href="gnu_linux/commandes_host_dig.html">commandes host &amp; dig </a></li>
-<li><a href="gnu_linux/commandes_reseaux.html">commandes réseaux </a></li>
+<li><a href="gnu_linux/gestion_reseaux.html">Gestion des réseaux </a></li>
+<li><a href="gnu_linux/commandes-ip.html">Commande ip </a></li>
 </ul>
 <h2 id="serveurs">Serveurs</h2>
 <ul>
